--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   provider:
   image_picker: ^0.6.7+4
+  wave_progress_widget: ^0.0.1
 
 dev_dependencies:
   flutter_test:
